# rig-domain-finder

./: .gitignore  AGENTS.md  pyproject.toml  requirements.txt  rig.md  rig.yaml  rig_concept_v_0_1.md  rig_v_0_1_dev_details.md
references/: domain_naming_guide.md
schemas/: ms1_generate_slds.schema.json  ms2_pick_best.schema.json  ts1_check_domains_in.schema.json  ts1_check_domains_out.schema.json
src/domainscout/: __init__.py  harness.py  run.py  schema_utils.py
tests/contracts/: test_schemas.py
tests/harness/: test_workflow.py
tests/run/: test_run_cli_output.py
tests/tool/: test_batching.py  test_checker_invalid.py  test_deterministic_mode.py  test_ranking.py  test_rdap_dns_mapping.py
tools/check_domains/src/domainscout_check/: __init__.py  checker.py  cli.py  dns_probe.py  env_guard.py  logging.py  models.py  rdap.py
